<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silverBlue"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/inputNewPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/oxford"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/input_new_password" />

    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNewPasswordText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="#90000000"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNewPassword"
        android:textColor="@color/oxford"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="#90000000"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/oxford"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/lightWarning"
        android:text="@string/back" />
</RelativeLayout>