<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/loginLayout"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/loginText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/app_title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTitle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/actor"
        android:drawablePadding="15dp"
        android:hint="@string/hint_username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:textColor="@color/warning"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:gravity="start"
        android:text="@string/required" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/email"
        android:drawablePadding="15dp"
        android:hint="@string/hint_email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:textColor="@color/warning"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:gravity="start"
        android:text="@string/required" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/password"
        android:drawablePadding="15dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:textColor="@color/warning"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:gravity="start"
        android:text="@string/required" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordText"
        android:text="@string/login"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="15sp" />
</RelativeLayout>