<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/oxford"
    tools:context=".EditObligationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/babyBlue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:id="@+id/editObligationDateText"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="October 23. 2000."
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/loginText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/editObligationLow"
            android:layout_width="0dp"
            android:background="@drawable/low_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/low" />

        <TextView
            android:id="@+id/editObligationMid"
            android:layout_width="0dp"
            android:background="@drawable/mid_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/mid" />

        <TextView
            android:id="@+id/editObligationHigh"
            android:layout_width="0dp"
            android:background="@drawable/high_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/high" />
    </LinearLayout>

    <!--    android:background="@drawable/empty_layout_border"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_margin="10dp"
        android:background="#20ffffff"
        android:layout_marginBottom="0dp">

        <EditText
            android:id="@+id/editObligationTitleText"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/gray"
            android:hint="@string/title"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editObligationTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_margin="10dp"
        android:background="#20ffffff"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/editObligationTimeText"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:hint="@string/time"
            android:textColorHint="@color/gray"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/clock_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal"
        android:background="@drawable/empty_layout_border"
        android:backgroundTint="@color/silverBlue"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/editObligationEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:background="#40ffffff"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/editObligationCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:width="150dp"
            android:height="50dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/create" />

        <Button
            android:id="@+id/editObligationCancelButton"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:height="50dp"
            android:backgroundTint="@color/lightWarning"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>