<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dailyPlanFragmentLayout"
    android:background="@color/oxford"
    tools:context=".fragments.DailyPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/dailyPlanDateText"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Oct 23 2000"
            android:textAlignment="center"
            android:textColor="@color/loginText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/silverBlue"
        android:background="@drawable/empty_layout_border"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="10dp"
            android:text="@string/past_obligations"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/dailyPlanCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/babyBlue"
            android:buttonTint="@color/black"
            android:layout_weight="1"
            android:button="@drawable/custom_checkbox"
            android:paddingTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/empty_layout_border"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/loginText"
        android:layout_marginBottom="0dp">

        <SearchView
            android:id="@+id/dailyPlanSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:queryHint="Search"
            android:iconifiedByDefault="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/lowTab"
            android:layout_width="0dp"
            android:background="@drawable/low_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/low" />

        <TextView
            android:id="@+id/midTab"
            android:layout_width="0dp"
            android:background="@drawable/mid_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/mid" />

        <TextView
            android:id="@+id/highTab"
            android:layout_width="0dp"
            android:background="@drawable/high_priority_layout_border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/high" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal"
        android:background="@drawable/empty_layout_border"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dailyPlanRecyclerView"
            android:layout_width="match_parent"
            android:background="@color/loginText"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dailyPlanFloatingButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:src="@drawable/add"
            app:maxImageSize="35dp"
            app:fabCustomSize= "59dp"
            />
    </LinearLayout>
</LinearLayout>